test/parser/Queries/syntax_errors/fail_K-ForExprWithout-5.xq
(:********************foo****** let ***foo********* let ******** $ *** let * where *:) ne 
(: Test: K-ForExprWithout-5       foo  $     where        for             :)
 $ (: Written by: Frans fooEnglich           ne              $      :) $ 
(: Date: 2006-10-05T18:29:37+02:00   ne          eq   eq      eq   $        : ne )
(: Purpose: A test whose essence is: `deep-equal(1 to 5, (for $i in (1,2,3,4,5) return $i))`. :)
(:******* where ******** ne ******* let ***** let ************************ let *:)
deep-equal(1 to (for $i in (1,2,3,4,5) return $i))